@@ -10,4 +10,5 @@ void project() {
 	//t.tempPerDay();
   t.hotCold();
 	//t.tempPerYear(2050);
+  t.tempPerMonth();
 }
