@@ -16,7 +16,8 @@ class tempTrender {
 	//void tempPerDay(); //Make a histogram of the average temperature of each day of the year
   void hotCold(); //Make a histogram of the hottest and coldest day of the year
 	//void tempPerYear(int yearToExtrapolate); //Make a histogram of average temperature per year, then fit and extrapolate to the given year
-
+  void tempPerMonth();
+  
 	private:
 	std::string filePath_;
 };
